--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <div class="alert-box" id="alert">Alert 박스</div>
     <button onclick="document.getElementById('alert').style.display = 'block';">버튼</button>
+    <button onclick="document.getElementById('alert').style.display = 'none';">닫기</button>
 </body>
 
 <script>
