--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h2 id="hi">올 때 메로나</h2>
 
     <div class="alert-box" id="alert">Alert 박스</div>
-    <button onclick="display_open()">버튼</button>
-    <button onclick="display_close()">닫기</button>
+    <button onclick="display('display')">버튼</button>
+    <button onclick="display('none')">닫기</button>
 </body>
 
 <script>
@@ -21,12 +21,8 @@
     document.getElementById('hello').style.fontSize = '30px';
     document.getElementById('hi').style.fontSize = '30px';
 
-    function display_open() {
-        document.getElementById('alert').style.display = 'block';
-    }
-
-    function display_close() {
-        document.getElementById('alert').style.display = 'none';
+    function display(temp) {
+        document.getElementById('alert').style.display = temp;
     }
 </script>
 </html>
