--- a/game.html
+++ b/game.html
@@ -19,5 +19,12 @@
     var nunu = new machine('consume', 'snowball');
     var garen = new machine('strike','courage');
 
+    class Hero {
+        constructor(tmp1, tmp2) {
+            this.q = tmp1;
+            this.w = tmp2;
+        }
+    }
+
 </script>
 </html>
