--- a/web-site/accordion_1.html
+++ b/web-site/accordion_1.html
@@ -9,11 +9,34 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
 </head>
 <body>
+    <!-- 부트 스트랩으로 클래스 적용해서 예쁘게 -->
+    <div class="container">
 
-    <table>
-        <thead></thead>
-        <tbody></tbody>
-    </table>
-    
+        <h3 style="text-align: center; padding-top: 50px;">FAQ
+            <small class="text-muted">with faded secondary text</small>
+        </h3>
+        <br>
+
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>No</th>
+                    <th>FAQ Title</th>
+                    <th>Category</th>
+                    <th>Date</th>
+                    <th>Hit</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>FAQ 제목</td>
+                    <td>이용안내</td>
+                    <td>2032.01.10</td>
+                    <td>84</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
