--- a/web-site/accordion_1.html
+++ b/web-site/accordion_1.html
@@ -17,7 +17,9 @@
         </h3>
         <br>
 
-        <table class="table">
+        <button id="btn-all-close">FAQ All close</button>
+
+        <table class="table table-bordered table-striped table-dark table-hover">
             <thead>
                 <tr>
                     <th>No</th>
@@ -32,7 +34,28 @@
                     <td>1</td>
                     <td>FAQ 제목</td>
                     <td>이용안내</td>
-                    <td>2032.01.10</td>
+                    <td>2032.01.01</td>
+                    <td>84</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>FAQ 제목</td>
+                    <td>회원가입</td>
+                    <td>2032.02.01</td>
+                    <td>45</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>FAQ 제목</td>
+                    <td>이용안내</td>
+                    <td>2032.01.01</td>
+                    <td>84</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>FAQ 제목</td>
+                    <td>이용안내</td>
+                    <td>2032.01.01</td>
                     <td>84</td>
                 </tr>
             </tbody>
