--- a/web-site/accordion_1.html
+++ b/web-site/accordion_1.html
@@ -20,7 +20,8 @@
         <button id="btn-all-close">FAQ All close</button>
 
         <table class="table table-bordered table-striped table-dark table-hover">
-            <thead>
+            <caption>FAQ List of Articles</caption>
+            <thead class="thead-light text-center">
                 <tr>
                     <th>No</th>
                     <th>FAQ Title</th>
@@ -29,10 +30,10 @@
                     <th>Hit</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="text-center">
                 <tr>
                     <td>1</td>
-                    <td>
+                    <td class="text-left" width="50%">
                         <div>
                             <p>What is Lorem Ipsum?</p>
                             <div>
