--- a/web-site/accordion_1.html
+++ b/web-site/accordion_1.html
@@ -47,6 +47,70 @@
                     <td>2032.01.01</td>
                     <td>84</td>
                 </tr>
+                <tr>
+                    <td>2</td>
+                    <td class="text-left" width="50%">
+                        <div class="panel-faq-container">
+                            <p class="panel-faq-title">Why do we use it?</p>
+                            <div class="panel-faq-answer">
+                                <p>Answer(2) ...↓</p>
+                                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
+                                <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+                            </div>
+                        </div>
+                    </td>
+                    <td>회원가입</td>
+                    <td>2032.02.01</td>
+                    <td>34</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td class="text-left" width="50%">
+                        <div class="panel-faq-container">
+                            <p class="panel-faq-title">Where does it come from?</p>
+                            <div class="panel-faq-answer">
+                                <p>Answer(3) ...↓</p>
+                                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p> 
+                                <p>Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+                            </div>
+                        </div>
+                    </td>
+                    <td>결제관련</td>
+                    <td>2032.01.01</td>
+                    <td>45</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td class="text-left" width="50%">
+                        <div class="panel-faq-container">
+                            <p class="panel-faq-title">Where can I get some?</p>
+                            <div class="panel-faq-answer">
+                                <p>Answer(4) ...↓</p>
+                                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p> 
+                                <p>All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</p>
+                            </div>
+                        </div>
+                    </td>
+                    <td>배송관련</td>
+                    <td>2032.02.15</td>
+                    <td>17</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td class="text-left" width="50%">
+                        <div class="panel-faq-container">
+                            <p class="panel-faq-title">The standard Lorem Ipsum passage</p>
+                            <div class="panel-faq-answer">
+                                <p>Answer(5) ...↓</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> 
+                                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            </div>
+                        </div>
+                    </td>
+                    <td>이용안내</td>
+                    <td>2032.03.01</td>
+                    <td>56</td>
+                </tr>
             </tbody>
         </table>
     </div>
