--- a/web-site/accordion_1.html
+++ b/web-site/accordion_1.html
@@ -111,6 +111,10 @@
                     <td>2032.03.01</td>
                     <td>56</td>
                 </tr>
+                <tr class="bg-info">
+                    <td class="text-left" colspan="4">자주 묻는 질문 총 합계</td>
+                    <td>182</td>
+                </tr>
             </tbody>
         </table>
     </div>
